...
    <string name="action_brew_rinse">Rinse</string>
    <string name="action_brew_add_coffee">Add coffee</string>
    <string name="action_brew_add_water">Add water</string>
    <string name="action_brew_bloom">Bloom</string>
    <string name="action_brew_pour">Pour</string>
    <string name="action_brew_agitate">Agitate</string>
    <string name="action_brew_steep">Steep</string>
    <string name="action_brew_release">Release</string>
    <string name="action_brew_press">Press</string>
    <string name="action_brew_heat">Heat</string>
    <string name="action_brew_observe">Observe</string>
    <string name="action_brew_filter">Filter</string>
    <string name="action_brew_serve">Serve</string>
...
